Bug 304883 - Uniqueness for integer column is not autodetected by the CSV Importer
Summary: Uniqueness for integer column is not autodetected by the CSV Importer
Status: CLOSED FIXED
Alias: None
Product: KEXI
Classification: Applications
Component: Migration/Import/Export (other bugs)
Version First Reported In: 2.5.0
Platform: Compiled Sources All
: NOR normal
Target Milestone: 2.5
Assignee: Jarosław Staniek
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-08-09 19:49 UTC by Jarosław Staniek
Modified: 2012-08-11 11:16 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.5.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jarosław Staniek 2012-08-09 19:49:51 UTC
Kexi CSV Importer has type autodetection feature but uniqueness for integer column is not autodetected.

Reproducible: Always

Steps to Reproduce:
1. Start import for any CSV data file with integer column with unique non empty values

Actual Results:  
"Primary key" checkbox is not set for the column.

Expected Results:  
"Primary key" checkbox is set for the column initially.
Comment 1 Jarosław Staniek 2012-08-10 20:39:52 UTC
Git commit a64f278bf56389f0da1db2316d1674f63284e6ca by Jaroslaw Staniek.
Committed on 09/08/2012 at 21:49.
Pushed by staniek into branch 'calligra/2.5'.

CSV Import: Fix uniqueness detection for integer column
REVIEW:105949
FIXED-IN:2.5.1

M  +19   -14   kexi/plugins/importexport/csv/kexicsvimportdialog.cpp

http://commits.kde.org/calligra/a64f278bf56389f0da1db2316d1674f63284e6ca
Comment 2 Jarosław Staniek 2012-08-10 20:51:39 UTC
Git commit b0d49d7f72a954bce345923e7950c7444c0077cb by Jaroslaw Staniek.
Committed on 09/08/2012 at 21:49.
Pushed by staniek into branch 'master'.

CSV Import: Fix uniqueness detection for integer column
REVIEW:105949

M  +19   -14   kexi/plugins/importexport/csv/kexicsvimportdialog.cpp

http://commits.kde.org/calligra/b0d49d7f72a954bce345923e7950c7444c0077cb