CSV Import: Fix uniqueness detection for integer column

BUG:304883
REVIEW:105949